--- a/daniel.html
+++ b/daniel.html
@@ -2,16 +2,21 @@
 <html lang="pt-br"> 
 <head>
 <meta charset="UTF-8">    
-<title>Minha pagina-Daniel</title>
+ <title>Minha pagina-Daniel</title>
+ <link rel="stylesheet" href="style.css"
+
 </head>
 <body>
+   <img src="barber.jpg">
     <h1>Sobre a Barbearia Alura</h1>
 
-    <p style="color: Tomato;">Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
+    <p>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
     
-   <p style="color: SlateBlue;"><em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes"</strong>.</em></p>
+    <p ><em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes"</strong>.</em></p>
     
-    <p style="color: MediumSeaGreen;">Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
+    <p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
+
+    <center> <button>Agende Horário</button></center>
 </body>
 
 
